clients email added to front end and database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
   <input id="name" placeholder="Your name (optional)">
   <input id="amount" type="number" placeholder="Amount">
   <input id="message" placeholder="Message">
+  <input id="email" placeholder="email (optional)">
   <button onclick="sendTip()">Send Tip</button>
 
   <h3>Recent Tips</h3>
